--- a/Display User Data/style.css
+++ b/Display User Data/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: 'Arial', sans-serif;
-    background-color: #f0f0f0;
+    background-color: white;
     margin: 0;
     display: flex;
     align-items: center;
@@ -20,7 +20,7 @@ body {
 button {
     font-size: 16px;
     padding: 10px 20px;
-    background-color: #4caf50;
+    background-color: rgb(0, 255, 0);
     color: white;
     border: none;
     cursor: pointer;
@@ -31,7 +31,7 @@ button:hover {
 }
 
 .user-card {
-    border: 1px solid #ddd;
+    border: 1px solid whitesmoke;
     border-radius: 8px;
     margin: 10px;
     padding: 10px;
